# Tetris-Project

./: CMakeLists.txt  README.md  main.c
.github/workflows/: codeql.yml
collect/: Collection.h  Colors.h  Structs.h
icon/: app-icon-build.cmd  app-icon.rc
module/: Block.c  Console.c  File.c  Font.c  Game.c  Property.c  StdMethod.c  ThemeCtrl.c  Timer.c
module/game/: Block.c  Punishment.c  Score.c
module/interface/: Game.c  Property.c
module/util/: Console.c  File.c  Font.c  Random.c  StdMethod.c  ThemeCtrl.c  Timer.c
